adding scale to img

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level -->
     <main>
       <div class="scene">
-        <img src="./images/image-qr-code.png" alt="QR image" srcset="" />
+        <img src="./images/image-qr-code.png" alt="QR image" srcset="" class="qrimg" />
         <div class="card">
           <h1 class="text">
             Improve your front-end skills by building projects
